RESOLVED FIXED110914
Fix a copy/paste error in WebLoaderClient::didBlockInsecurePluginVersion
https://bugs.webkit.org/show_bug.cgi?id=110914
Summary Fix a copy/paste error in WebLoaderClient::didBlockInsecurePluginVersion
Anders Carlsson
Reported 2013-02-26 15:05:50 PST
Fix a copy/paste error in WebLoaderClient::didBlockInsecurePluginVersion
Attachments
Patch (1.76 KB, patch)
2013-02-26 15:06 PST, Anders Carlsson
bdakin: review+
Anders Carlsson
Comment 1 2013-02-26 15:06:39 PST
Anders Carlsson
Comment 2 2013-02-26 15:08:13 PST
Note You need to log in before you can comment on or make changes to this bug.