Fix a copy/paste error in WebLoaderClient::didBlockInsecurePluginVersion https://bugs.webkit.org/show_bug.cgi?id=110914 <rdar://problem/13297581>

Reviewed by Beth Dakin.

Pass kWKErrorCodeInsecurePlugInVersion to the pluginDidFail callback.

* UIProcess/WebLoaderClient.cpp:
(WebKit::WebLoaderClient::didBlockInsecurePluginVersion):

Canonical link: https://commits.webkit.org/129202@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144114 268f45cc-cd09-0410-ab3c-d52691b4dbfc